--- a/scripts/ml_training/essay_scoring/offload/Dockerfile
+++ b/scripts/ml_training/essay_scoring/offload/Dockerfile
@@ -1,12 +1,12 @@
 # Research-scoped DeBERTa embedding offload server.
 #
 # Notes:
-# - Default base image is CPU-only. On Hemma, override BASE_IMAGE to a ROCm-enabled
-#   PyTorch image for GPU inference (canonical: rocm/pytorch:latest).
-# - Uses `pdm install -G ml-research` so dependencies match the research pipeline.
-# - We intentionally do NOT install `torch*` via PDM/pip when using a ROCm base image,
-#   to avoid clobbering the ROCm-enabled torch bundled in that image.
-ARG BASE_IMAGE=python:3.11-slim
+# - Default base image is ROCm-enabled for Hemma (canonical: rocm/pytorch:latest).
+#   Override BASE_IMAGE only if you know the base provides a compatible `torch`.
+# - Uses the minimal `offload-runtime` dependency group (not `ml-research`) so Hemma
+#   runtime images don't pull training-only deps (e.g. XGBoost/SHAP/spaCy).
+# - We intentionally do NOT install `torch*` via pip; the base image is authoritative.
+ARG BASE_IMAGE=rocm/pytorch:latest
 FROM ${BASE_IMAGE} AS runtime
 
 ENV PYTHONUNBUFFERED=1 \
@@ -31,18 +31,20 @@ COPY scripts/__init__.py scripts/__init__.py
 COPY scripts/ml_training/__init__.py scripts/ml_training/__init__.py
 COPY scripts/ml_training/essay_scoring/ scripts/ml_training/essay_scoring/
 
-# Install locked deps from `ml-research`, but exclude torch* so the base image stays authoritative.
-RUN pdm export -G ml-research -f requirements --without-hashes -o /tmp/requirements.txt && \
-    # PDM export may include environment markers; match package name prefix (not full line).
-    grep -Ev '^(torch|torchvision|torchaudio)\b' /tmp/requirements.txt \
-      | grep -Ev '^triton\b' \
-      | grep -Ev '^nvidia[-_]' \
+# Sanity: base image must provide torch (ROCm torch reports as torch.cuda + torch.version.hip).
+RUN python -c "import torch; print('torch', torch.__version__); print('hip', getattr(torch.version, 'hip', None)); print('cuda_is_available', torch.cuda.is_available())"
+
+# Install locked deps from `offload-runtime` only (exclude root `default` deps).
+#
+# The base image provides torch; this layer only installs the Python deps needed for
+# the offload server and DeBERTa tokenization/model loading.
+RUN pdm export --no-default -G offload-runtime -f requirements --without-hashes -o /tmp/requirements.txt && \
+    # Drop NVIDIA/CUDA packages if they appear (bloat + wrong hardware intent).
+    grep -Ev '^nvidia[-_]' /tmp/requirements.txt \
       | grep -Ev '^cuda[-_]' \
+      | grep -Ev '^triton\b' \
       > /tmp/requirements.filtered.txt && \
     python -m pip install --no-cache-dir -r /tmp/requirements.filtered.txt
-
-# Quick sanity printout (helpful in build logs on Hemma).
-RUN python -c "import torch; print('torch', torch.__version__); print('hip', getattr(torch.version, 'hip', None)); print('cuda_is_available', torch.cuda.is_available())"
 
 EXPOSE 9000
 
