--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5438:5432"  # Use unique port to avoid conflict with local PostgreSQL
+      - "127.0.0.1:5438:5432"  # Use unique port to avoid conflict with local PostgreSQL
     environment:
       - POSTGRES_DB=huleedu_batch_orchestrator
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -30,7 +30,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5433:5432"  # Different port from BOS database
+      - "127.0.0.1:5433:5432"  # Different port from BOS database
     environment:
       - POSTGRES_DB=huleedu_essay_lifecycle
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -52,7 +52,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5434:5432"  # Different port from other databases
+      - "127.0.0.1:5434:5432"  # Different port from other databases
     environment:
       - POSTGRES_DB=huleedu_cj_assessment
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -73,7 +73,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5435:5432"
+      - "127.0.0.1:5435:5432"
     environment:
       - POSTGRES_DB=huleedu_class_management
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -95,7 +95,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5439:5432"
+      - "127.0.0.1:5439:5432"
     environment:
       - POSTGRES_DB=huleedu_file_service
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -117,7 +117,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5445:5432"
+      - "127.0.0.1:5445:5432"
     environment:
       - POSTGRES_DB=huleedu_content
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -139,7 +139,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
@@ -150,47 +150,35 @@ services:
       retries: 5
       start_period: 10s
 
-  zookeeper:
-    image: bitnami/zookeeper:3.9
-    container_name: huleedu_zookeeper
-    restart: unless-stopped
-    networks:
-      - huleedu_internal_network
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    healthcheck:
-      test: ["CMD-SHELL", "zkServer.sh status || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-
   kafka:
-    image: bitnami/kafka:3.7
+    image: apache/kafka:3.8.0
     container_name: huleedu_kafka
     restart: unless-stopped
     init: true  # Enable init system to properly reap zombie processes
-    depends_on:
-      zookeeper:
-        condition: service_healthy
     networks:
       - huleedu_internal_network
     ports:
-      - "9092:9092"
-      - "9093:9093"
+      - "127.0.0.1:9092:9092"
+      - "127.0.0.1:9093:9093"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092,EXTERNAL://0.0.0.0:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=1
+      # KRaft mode (no ZooKeeper).
+      - KAFKA_NODE_ID=1
+      - KAFKA_PROCESS_ROLES=broker,controller
+      - KAFKA_LISTENERS=PLAINTEXT://:9092,PLAINTEXT_HOST://:9093,CONTROLLER://:9094
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9093
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka:9094
+      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+      - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      - KAFKA_NUM_PARTITIONS=3
       - KAFKA_HEAP_OPTS=-Xmx1G -Xms512M  # JVM heap: max 1GB, initial 512MB
+    volumes:
+      - kafka_data:/var/lib/kafka/data
     deploy:
       resources:
         limits:
@@ -200,11 +188,11 @@ services:
           memory: 1G      # Guaranteed memory
           cpus: '1.0'     # Guaranteed CPU
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list"]
       interval: 15s
       timeout: 20s
       retries: 8
-      start_period: 60s  # Reduced from 120s since Zookeeper health is now guaranteed
+      start_period: 60s
 
   # PostgreSQL database for Result Aggregator Service
 
@@ -216,7 +204,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5437:5432"
+      - "127.0.0.1:5437:5432"
     environment:
       - POSTGRES_DB=huleedu_spellchecker
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -239,7 +227,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5436:5432"
+      - "127.0.0.1:5436:5432"
     environment:
       - POSTGRES_DB=huleedu_result_aggregator
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -261,7 +249,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5440:5432"
+      - "127.0.0.1:5440:5432"
     environment:
       - POSTGRES_DB=huleedu_nlp
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -283,7 +271,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5441:5432"
+      - "127.0.0.1:5441:5432"
     environment:
       - POSTGRES_DB=huleedu_batch_conductor
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -305,7 +293,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5442:5432"
+      - "127.0.0.1:5442:5432"
     environment:
       - POSTGRES_DB=huleedu_identity
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -327,7 +315,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5443:5432"
+      - "127.0.0.1:5443:5432"
     environment:
       - POSTGRES_DB=huleedu_email
       - POSTGRES_USER=${HULEEDU_DB_USER}
@@ -349,7 +337,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5444:5432"
+      - "127.0.0.1:5444:5432"
     environment:
       - POSTGRES_DB=huleedu_entitlements
       - POSTGRES_USER=${HULEEDU_DB_USER}
