Research: Hemma offload + essay-scoring pipeline updates
- Update Hemma runbooks and research docker compose
- Extend essay_scoring pipeline + offload embedding client
- Add/adjust research and runner tests

--- a/docker-compose.hemma.research.yml
+++ b/docker-compose.hemma.research.yml
@@ -42,6 +42,7 @@ services:
       - OFFLOAD_HTTP_HOST=0.0.0.0
       - OFFLOAD_HTTP_PORT=9000
       - OFFLOAD_TORCH_DEVICE=${OFFLOAD_TORCH_DEVICE:-cuda}
+      - OFFLOAD_EMBEDDING_BATCH_SIZE=${OFFLOAD_EMBEDDING_BATCH_SIZE:-32}
       # Optional: Hugging Face auth token to avoid rate limiting during model downloads.
       # Set in Hemma prod `.env` as `HF_TOKEN=...` (do not commit).
       - HF_TOKEN=${HF_TOKEN:-}
