--- a/docker-compose.hemma.research.yml
+++ b/docker-compose.hemma.research.yml
@@ -20,12 +20,14 @@ services:
     ports:
       - "127.0.0.1:8085:8085"
 
-  # Research-only DeBERTa embedding offload server (binary `.npy` response).
+  # Research-only feature offload server (`/v1/extract` zip bundle + `/v1/embed` legacy `.npy`).
   # Default is localhost-only on Hemma. Access from a dev machine via SSH tunnel:
   #   ssh hemma -L 19000:127.0.0.1:9000 -N
   essay_embed_offload:
     profiles:
       - research-offload
+    depends_on:
+      - language_tool_service
     build:
       context: .
       dockerfile: scripts/ml_training/essay_scoring/offload/Dockerfile
@@ -43,6 +45,8 @@ services:
       - OFFLOAD_HTTP_PORT=9000
       - OFFLOAD_TORCH_DEVICE=${OFFLOAD_TORCH_DEVICE:-cuda}
       - OFFLOAD_EMBEDDING_BATCH_SIZE=${OFFLOAD_EMBEDDING_BATCH_SIZE:-32}
+      - OFFLOAD_LANGUAGE_TOOL_URL=http://language_tool_service:8085
+      - OFFLOAD_LANGUAGE_TOOL_JAR_VERSION=${OFFLOAD_LANGUAGE_TOOL_JAR_VERSION:?Missing OFFLOAD_LANGUAGE_TOOL_JAR_VERSION}
       # Optional: Hugging Face auth token to avoid rate limiting during model downloads.
       # Set in Hemma prod `.env` as `HF_TOKEN=...` (do not commit).
       - HF_TOKEN=${HF_TOKEN:-}
