--- a/docker-compose.hemma.research.yml
+++ b/docker-compose.hemma.research.yml
@@ -43,9 +43,13 @@ services:
     environment:
       - OFFLOAD_HTTP_HOST=0.0.0.0
       - OFFLOAD_HTTP_PORT=9000
+      - OFFLOAD_HTTP_MAX_WORKERS=${OFFLOAD_HTTP_MAX_WORKERS:-4}
       - OFFLOAD_TORCH_DEVICE=${OFFLOAD_TORCH_DEVICE:-cuda}
       - OFFLOAD_EMBEDDING_BATCH_SIZE=${OFFLOAD_EMBEDDING_BATCH_SIZE:-32}
+      - OFFLOAD_SPACY_N_PROCESS=${OFFLOAD_SPACY_N_PROCESS:-1}
+      - OFFLOAD_SPACY_PIPE_BATCH_SIZE=${OFFLOAD_SPACY_PIPE_BATCH_SIZE:-32}
       - OFFLOAD_LANGUAGE_TOOL_URL=http://language_tool_service:8085
+      - OFFLOAD_LANGUAGE_TOOL_MAX_CONCURRENCY=${OFFLOAD_LANGUAGE_TOOL_MAX_CONCURRENCY:-32}
       - OFFLOAD_LANGUAGE_TOOL_JAR_VERSION=${OFFLOAD_LANGUAGE_TOOL_JAR_VERSION:?Missing OFFLOAD_LANGUAGE_TOOL_JAR_VERSION}
       # Optional: Hugging Face auth token to avoid rate limiting during model downloads.
       # Set in Hemma prod `.env` as `HF_TOKEN=...` (do not commit).
