feat: add essay scoring comparison and optuna sweep workflows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ ml-research = [
     "lexical-diversity",
     "matplotlib",
     "numpy",
+    "optuna",
     "pandas",
     "protobuf",
     "scikit-learn",
@@ -105,6 +106,7 @@ ml-research = [
     "sentencepiece",
     "shap",
     "spacy",
+    "statsmodels",
     "sv-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/sv_core_news_sm-3.8.0/sv_core_news_sm-3.8.0-py3-none-any.whl",
     "textdescriptives",
     "tiktoken",
