--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ ml-research = [
     "numpy",
     "optuna",
     "pandas",
+    "peft",
     "protobuf",
     "scikit-learn",
     "sentence-transformers",
